2005-09-17 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b11

	* "Fix": Cach invalid input for $page and set_albumListPage in view_album.php and stats.php
	Found by Andrew Khlebutin

2005-09-17 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b10

	* Fix: fs_opendir leaks resources.
	  Found and fixed by David Faulkner

2005-09-17 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b9

        * Fix: Make changeToAlbum emails HTML-mails, so links work correctly.
	  Thanks to Ansolon.

2005-09-15 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b8

	* Fix: Typo.

2005-09-15 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b7

	* Fix: Turn of verbose display of exifdata with jhead.
	       This caused problems as verbosed data has different structure.
	
	* Fix: First line of exifdata was always removed,
	       regardless wether jhead or exiftags is used.

2005-09-13 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b6

	* Change: Added paramater to gallery_mail() to send mail as HTML-mail.

	* Fix: Make comment emails HTML-mails, so links work correctly.

2005-09-12 Dariush Molavi <dari@nukedgallery.net> 1.5.1-RC4-cvs-b5

	* Change: New address for Free Software Foundation in GPL header.

2005-09-12 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b4

	* New: Added function urlIsrelative().

	* Fix: Relative URL in $gallery->app->photoAlbumURL did not longer work,
	       due to new full url schema added in
               1.5.1-RC2-cvs-b14 + 1.5.1-RC3-cvs-b3.

	* Fix: $name is not set when Gallery is startpage in *Nuke.
	       So we try to extract it from $modpath.

	* Fix: Url in stats-wizard was not generated on first load when embedded.

2005-09-12 Rasmus Lerdorf 1.5.1-RC4-cvs-b3

	* Fix: Some functions taking arguments by reference for no real reason
	       in gallery_remote2.php.
	       It breaks under the latest versions of PHP because
	       the reference checking has improved.

2005-09-08 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b2

	* "Fix": As we use now (1.5.1-RC3-cvs-b12) verbose output for exifdata, 