@@ -1,3 +1,8 @@
+2005-09-21 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b12
+
+	* Fix: Urls for Gallery embedded into CPGNuke didnt work.
+	       So we do the same for cpgnuke as for the other *nukes done in 1.5.1-RC3-cvs-b3.
+	
 2005-09-17 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b11
 
 	* "Fix": Cach invalid input for $page and set_albumListPage in view_album.php and stats.php
